--- a/pages/Apple_Pie.html
+++ b/pages/Apple_Pie.html
@@ -7,7 +7,7 @@
       name="description"
       content="recipe from all variety of types and cultures"
     />
-    <title>Chicken Skewers with Slices of Sweet Peppers</title>
+    <title>Apple Pie</title>
     <link rel="icon" type="svg" href="../images/icons/black cooking hat.svg" />
     <link
       rel="icon"
@@ -82,63 +82,60 @@
       <section class="wrapper hidden">
         <section class="recipeHeader">
           <div class="recipeDetail">
-            <h1>Chicken Skewers with Slices of Sweet Peppers</h1>
+            <h1>Apple Pie</h1>
             <div class="timeAndType">
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
                 <div class="duration">
-                  <span>PREP TIME</span><span>25 Minutes</span>
+                  <span>PREP TIME</span><span>30 Minutes</span>
                 </div>
               </div>
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
                 <div class="duration">
-                  <span>COOK TIME</span><span>15 Minutes</span>
+                  <span>COOK TIME</span><span>1 Hour</span>
                 </div>
               </div>
               <div class="specificMealType container">
-                <i class="fa-solid fa-utensils"></i><span>Grilled</span>
+                <i class="fa-solid fa-utensils"></i><span>Dessert</span>
               </div>
             </div>
           </div>
         </section>
         <section class="imageAndNutrition">
-          <img
-            src="../images/food_samples/Chicken_Skewers.webp"
-            alt="Chicken Skewers with Sweet Peppers"
-          />
+          <img src="../images/food_samples/Apple_Pie.webp" alt="Apple Pie" />
           <div class="nutrition">
             <h4>Nutrition Information</h4>
             <table>
               <tr>
                 <td>Calories</td>
-                <td style="text-align: right">280 kcal</td>
+                <td style="text-align: right">300 kcal</td>
               </tr>
               <tr>
                 <td>Total Fat</td>
-                <td style="text-align: right">10 g</td>
+                <td style="text-align: right">14 g</td>
               </tr>
               <tr>
                 <td>Protein</td>
-                <td style="text-align: right">32 g</td>
+                <td style="text-align: right">2 g</td>
               </tr>
               <tr>
                 <td>Carbohydrate</td>
-                <td style="text-align: right">6 g</td>
+                <td style="text-align: right">44 g</td>
               </tr>
               <tr>
                 <td>Cholesterol</td>
-                <td style="text-align: right">75 mg</td>
+                <td style="text-align: right">35 mg</td>
               </tr>
             </table>
           </div>
         </section>
         <section class="description">
           <p>
-            These Chicken Skewers with Sweet Peppers are a perfect summer dish.
-            The tender chicken, paired with the sweetness of the peppers,
-            creates a delicious balance of flavors. Grilled to perfection, this
-            dish is great for any cookout or family dinner.
+            Apple Pie is a classic dessert, perfect for any occasion. The flaky,
+            buttery crust combined with the sweet, spiced apple filling makes
+            for an irresistible treat. Whether served warm with ice cream or
+            enjoyed on its own, Apple Pie never goes out of style.
           </p>
         </section>
         <section class="ingredientAndRecommendations">
@@ -146,36 +143,36 @@
             <h2>Ingredients</h2>
             <form>
               <label
-                ><input type="checkbox" class="customCheckbox" /> 4 chicken
-                breasts, cut into cubes</label
+                ><input type="checkbox" class="customCheckbox" /> 4-5 medium
+                apples, peeled and sliced</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 2 tbsp olive
-                oil</label
+                ><input type="checkbox" class="customCheckbox" /> 1 cup
+                sugar</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 tsp
-                paprika</label
+                ><input type="checkbox" class="customCheckbox" /> 1 tsp ground
+                cinnamon</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1/2 tsp garlic
-                powder</label
+                ><input type="checkbox" class="customCheckbox" /> 1/2 tsp ground
+                nutmeg</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1/2 tsp onion
-                powder</label
+                ><input type="checkbox" class="customCheckbox" /> 2 tbsp
+                flour</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> Salt and
-                pepper to taste</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 2 tbsp lemon
+                ><input type="checkbox" class="customCheckbox" /> 1 tbsp lemon
                 juice</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 2 sweet
-                peppers (red and yellow), sliced</label
+                ><input type="checkbox" class="customCheckbox" /> 1/4 tsp
+                salt</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 1 package pie
+                crust (or homemade)</label
               ><br />
             </form>
           </div>
@@ -184,20 +181,20 @@
             <div class="separate">
               <!-- start -->
               <div class="recipe">
-                <a href="Apple_Pie.html">
+                <a href="Chicken_Skewers.html">
                   <img
-                    src="../images/food_samples/Apple_Pie.webp"
-                    alt="Apple Pie"
+                    src="../images/food_samples/Chicken_Skewers.webp"
+                    alt="Chicken Skewers"
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title">Apple Pie</span>
+                    <span class="title">Chicken Skewers</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Apples</span>
-                        <span class="mainIngredient">Sugar</span>
-                        <span class="mainIngredient">Cinnamon</span>
+                        <span class="mainIngredient">Chicken</span>
+                        <span class="mainIngredient">Olive Oil</span>
+                        <span class="mainIngredient">Spices</span>
                       </div>
                     </div>
                   </div>
@@ -216,9 +213,9 @@
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Ground Beef</span>
-                        <span class="mainIngredient">Tomatoes</span>
                         <span class="mainIngredient">Pasta</span>
+                        <span class="mainIngredient">Tomatoes</span>
+                        <span class="mainIngredient">Ground Beef</span>
                       </div>
                     </div>
                   </div>
@@ -233,15 +230,13 @@
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title"
-                      >Grilled Chicken with Herb Marinade</span
-                    >
+                    <span class="title">Grilled Chicken</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
                         <span class="mainIngredient">Chicken</span>
-                        <span class="mainIngredient">Olive Oil</span>
                         <span class="mainIngredient">Herbs</span>
+                        <span class="mainIngredient">Garlic</span>
                       </div>
                     </div>
                   </div>
@@ -275,52 +270,45 @@
           <div class="instructions">
             <h2>Instructions</h2>
             <dl>
-              <dt>1. Prepare the Marinade</dt>
+              <dt>1. Prepare the Apple Filling</dt>
               <dd>
-                In a large bowl, combine the olive oil, paprika, garlic powder,
-                onion powder, salt, and pepper. Add the lemon juice and whisk
-                everything together until smooth. This will form the flavorful
-                marinade for the chicken and vegetables.
+                In a large mixing bowl, combine the sliced apples, sugar,
+                cinnamon, nutmeg, flour, lemon juice, and salt. Toss to coat the
+                apples evenly.
               </dd>
 
-              <dt>2. Marinate the Chicken</dt>
+              <dt>2. Prepare the Pie Crust</dt>
               <dd>
-                Cut the chicken breasts into cubes and add them to the marinade.
-                Toss the chicken well to ensure every piece is coated evenly.
-                Cover and refrigerate the chicken for at least 15 minutes, but
-                up to 2 hours for more flavor.
+                Roll out the pie crust on a floured surface. Carefully place the
+                first crust into a pie dish, pressing it gently to fit.
               </dd>
 
-              <dt>3. Prepare the Skewers</dt>
+              <dt>3. Fill the Pie</dt>
               <dd>
-                While the chicken marinates, slice the sweet peppers into 1-inch
-                strips. Soak wooden skewers in water for at least 30 minutes to
-                prevent burning. If using metal skewers, no soaking is required.
-                Alternate threading the marinated chicken and sweet pepper
-                slices onto the skewers.
+                Pour the apple filling into the prepared pie crust, spreading
+                the apples evenly. Place small pats of butter on top of the
+                apples.
               </dd>
 
-              <dt>4. Preheat the Grill</dt>
+              <dt>4. Add the Top Crust</dt>
               <dd>
-                Preheat your grill to medium-high heat (about 400°F or 200°C).
-                This will allow the chicken to cook through while achieving a
-                nice char on the peppers.
+                Place the second crust on top of the pie, trimming any excess
+                dough. Pinch the edges of the crust together to seal the pie.
               </dd>
 
-              <dt>5. Grill the Skewers</dt>
+              <dt>5. Bake the Pie</dt>
               <dd>
-                Place the skewers on the grill and cook for about 5-7 minutes
-                per side. Turn the skewers halfway through cooking to ensure
-                that the chicken is cooked evenly. The internal temperature of
-                the chicken should reach 165°F (75°C).
+                Preheat the oven to 375°F (190°C). Bake the pie for 45-50
+                minutes, or until the crust is golden brown and the apples are
+                tender. You may need to cover the edges with aluminum foil to
+                prevent over-browning.
               </dd>
 
-              <dt>6. Serve the Skewers</dt>
+              <dt>6. Cool and Serve</dt>
               <dd>
-                Once the chicken is cooked through and slightly charred, remove
-                the skewers from the grill. Let the skewers rest for a few
-                minutes before serving. Enjoy with a side of rice, a fresh
-                salad, or some flatbreads for a complete meal.
+                Allow the pie to cool for at least 2 hours before serving. Serve
+                with a scoop of vanilla ice cream or a dollop of whipped cream,
+                if desired.
               </dd>
             </dl>
           </div>
