--- a/pages/Spaghetti_Bolognese.html
+++ b/pages/Spaghetti_Bolognese.html
@@ -7,7 +7,7 @@
       name="description"
       content="recipe from all variety of types and cultures"
     />
-    <title>Chicken Skewers with Slices of Sweet Peppers</title>
+    <title>Spaghetti Bolognese</title>
     <link rel="icon" type="svg" href="../images/icons/black cooking hat.svg" />
     <link
       rel="icon"
@@ -82,63 +82,62 @@
       <section class="wrapper hidden">
         <section class="recipeHeader">
           <div class="recipeDetail">
-            <h1>Chicken Skewers with Slices of Sweet Peppers</h1>
+            <h1>Spaghetti Bolognese</h1>
             <div class="timeAndType">
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
                 <div class="duration">
-                  <span>PREP TIME</span><span>25 Minutes</span>
+                  <span>PREP TIME</span><span>20 Minutes</span>
                 </div>
               </div>
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
                 <div class="duration">
-                  <span>COOK TIME</span><span>15 Minutes</span>
+                  <span>COOK TIME</span><span>45 Minutes</span>
                 </div>
               </div>
               <div class="specificMealType container">
-                <i class="fa-solid fa-utensils"></i><span>Grilled</span>
+                <i class="fa-solid fa-utensils"></i><span>Pasta</span>
               </div>
             </div>
           </div>
         </section>
         <section class="imageAndNutrition">
           <img
-            src="../images/food_samples/Chicken_Skewers.webp"
-            alt="Chicken Skewers with Sweet Peppers"
+            src="../images/food_samples/Spaghetti_Bolognese.webp"
+            alt="Spaghetti Bolognese"
           />
           <div class="nutrition">
             <h4>Nutrition Information</h4>
             <table>
               <tr>
                 <td>Calories</td>
-                <td style="text-align: right">280 kcal</td>
+                <td style="text-align: right">350 kcal</td>
               </tr>
               <tr>
                 <td>Total Fat</td>
-                <td style="text-align: right">10 g</td>
+                <td style="text-align: right">12 g</td>
               </tr>
               <tr>
                 <td>Protein</td>
-                <td style="text-align: right">32 g</td>
+                <td style="text-align: right">25 g</td>
               </tr>
               <tr>
                 <td>Carbohydrate</td>
-                <td style="text-align: right">6 g</td>
+                <td style="text-align: right">40 g</td>
               </tr>
               <tr>
                 <td>Cholesterol</td>
-                <td style="text-align: right">75 mg</td>
+                <td style="text-align: right">60 mg</td>
               </tr>
             </table>
           </div>
         </section>
         <section class="description">
           <p>
-            These Chicken Skewers with Sweet Peppers are a perfect summer dish.
-            The tender chicken, paired with the sweetness of the peppers,
-            creates a delicious balance of flavors. Grilled to perfection, this
-            dish is great for any cookout or family dinner.
+            Spaghetti Bolognese is a classic Italian dish that combines rich,
+            flavorful meat sauce with perfectly cooked pasta. This hearty meal
+            is perfect for family dinners and is sure to be loved by everyone!
           </p>
         </section>
         <section class="ingredientAndRecommendations">
@@ -146,36 +145,44 @@
             <h2>Ingredients</h2>
             <form>
               <label
-                ><input type="checkbox" class="customCheckbox" /> 4 chicken
-                breasts, cut into cubes</label
+                ><input type="checkbox" class="customCheckbox" /> 400 g ground
+                beef</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 2 tbsp olive
-                oil</label
+                ><input type="checkbox" class="customCheckbox" /> 1 onion,
+                finely chopped</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 2 garlic
+                cloves, minced</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 1 can (400 g)
+                crushed tomatoes</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 2 tbsp tomato
+                paste</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 1 tbsp dried
+                oregano</label
               ><br />
               <label
                 ><input type="checkbox" class="customCheckbox" /> 1 tsp
-                paprika</label
+                sugar</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1/2 tsp garlic
-                powder</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 1/2 tsp onion
-                powder</label
+                ><input type="checkbox" class="customCheckbox" /> 200 g
+                spaghetti</label
               ><br />
               <label
                 ><input type="checkbox" class="customCheckbox" /> Salt and
                 pepper to taste</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 2 tbsp lemon
-                juice</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 2 sweet
-                peppers (red and yellow), sliced</label
+                ><input type="checkbox" class="customCheckbox" /> Fresh basil,
+                for garnish</label
               ><br />
             </form>
           </div>
@@ -184,41 +191,20 @@
             <div class="separate">
               <!-- start -->
               <div class="recipe">
-                <a href="Apple_Pie.html">
+                <a href="Chicken_Skewers.html">
                   <img
-                    src="../images/food_samples/Apple_Pie.webp"
-                    alt="Apple Pie"
+                    src="../images/food_samples/Chicken_Skewers.webp"
+                    alt="Chicken Skewers"
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title">Apple Pie</span>
+                    <span class="title">Chicken Skewers</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Apples</span>
-                        <span class="mainIngredient">Sugar</span>
-                        <span class="mainIngredient">Cinnamon</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!-- next recipe -->
-              <div class="recipe">
-                <a href="Spaghetti_Bolognese.html">
-                  <img
-                    src="../images/food_samples/Spaghetti_Bolognese.webp"
-                    alt="Spaghetti Bolognese"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title">Spaghetti Bolognese</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Ground Beef</span>
-                        <span class="mainIngredient">Tomatoes</span>
-                        <span class="mainIngredient">Pasta</span>
+                        <span class="mainIngredient">Chicken</span>
+                        <span class="mainIngredient">Peppers</span>
+                        <span class="mainIngredient">Olive Oil</span>
                       </div>
                     </div>
                   </div>
@@ -268,6 +254,27 @@
                   </div>
                 </a>
               </div>
+              <!-- next recipe -->
+              <div class="recipe">
+                <a href="Apple_Pie.html">
+                  <img
+                    src="../images/food_samples/Apple_Pie.webp"
+                    alt="Apple Pie"
+                    loading="lazy"
+                  />
+                  <div class="separate little">
+                    <span class="title">Apple Pie</span>
+                    <div class="mainIngredients">
+                      <span class="heading">Main Ingredients:</span>
+                      <div class="mainIngredientList">
+                        <span class="mainIngredient">Apples</span>
+                        <span class="mainIngredient">Sugar</span>
+                        <span class="mainIngredient">Cinnamon</span>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
             </div>
           </div>
         </section>
@@ -275,52 +282,39 @@
           <div class="instructions">
             <h2>Instructions</h2>
             <dl>
-              <dt>1. Prepare the Marinade</dt>
+              <dt>1. Prepare the Sauce</dt>
               <dd>
-                In a large bowl, combine the olive oil, paprika, garlic powder,
-                onion powder, salt, and pepper. Add the lemon juice and whisk
-                everything together until smooth. This will form the flavorful
-                marinade for the chicken and vegetables.
+                In a large pan, heat olive oil over medium heat. Add the chopped
+                onion and garlic, and cook until softened, about 5 minutes. Add
+                the ground beef and cook until browned, breaking it apart with a
+                spoon.
               </dd>
 
-              <dt>2. Marinate the Chicken</dt>
+              <dt>2. Add Tomatoes and Seasonings</dt>
               <dd>
-                Cut the chicken breasts into cubes and add them to the marinade.
-                Toss the chicken well to ensure every piece is coated evenly.
-                Cover and refrigerate the chicken for at least 15 minutes, but
-                up to 2 hours for more flavor.
+                Stir in the crushed tomatoes, tomato paste, oregano, sugar,
+                salt, and pepper. Reduce the heat and let the sauce simmer for
+                about 30 minutes, stirring occasionally, until thickened.
               </dd>
 
-              <dt>3. Prepare the Skewers</dt>
+              <dt>3. Cook the Spaghetti</dt>
               <dd>
-                While the chicken marinates, slice the sweet peppers into 1-inch
-                strips. Soak wooden skewers in water for at least 30 minutes to
-                prevent burning. If using metal skewers, no soaking is required.
-                Alternate threading the marinated chicken and sweet pepper
-                slices onto the skewers.
+                While the sauce simmers, cook the spaghetti according to package
+                instructions. Drain the pasta and set aside, reserving some
+                pasta water for later use.
               </dd>
 
-              <dt>4. Preheat the Grill</dt>
+              <dt>4. Combine the Pasta and Sauce</dt>
               <dd>
-                Preheat your grill to medium-high heat (about 400°F or 200°C).
-                This will allow the chicken to cook through while achieving a
-                nice char on the peppers.
+                Add the cooked spaghetti to the sauce, tossing to coat the
+                pasta. If needed, add a bit of reserved pasta water to reach the
+                desired consistency.
               </dd>
 
-              <dt>5. Grill the Skewers</dt>
+              <dt>5. Serve</dt>
               <dd>
-                Place the skewers on the grill and cook for about 5-7 minutes
-                per side. Turn the skewers halfway through cooking to ensure
-                that the chicken is cooked evenly. The internal temperature of
-                the chicken should reach 165°F (75°C).
-              </dd>
-
-              <dt>6. Serve the Skewers</dt>
-              <dd>
-                Once the chicken is cooked through and slightly charred, remove
-                the skewers from the grill. Let the skewers rest for a few
-                minutes before serving. Enjoy with a side of rice, a fresh
-                salad, or some flatbreads for a complete meal.
+                Divide the spaghetti between serving plates and garnish with
+                fresh basil. Serve with grated Parmesan cheese if desired.
               </dd>
             </dl>
           </div>
